
Legend :
Added - indicates new functionality or new part of distribution
Changed - indicates a change in using/behavior FreeRapid
Fixed - indicates a bug fix

XXX December 2008 - FreeRapid Downloader 0.8 released
  Added : --portable command line switch for application start [requested by Rusttaf]
          - with this switch, configuration files will be stored in the 'config' folder,
            all file paths will be saved relatively to FRD folder (if possible) - useful for USB FLASH drives  
  Added : support for plugins update + many UI settings for it
  Added : detection of presence of ESET Smart Antivirus on Windows system to avoid startup problems
  Added : UI - new tab sheet in User Preferences dialog for plugins
          - ability to disable plugin for using/updating
  Added : plugins - service server is indicated by icon
  Added : support for checking file existence on the server (if it is supported by given plugin)
          - it's indicated by new icons in the table:
            green - link working/downloadable, red - file was deleted/removed, gray - unknown state
          - this feature can be disabled in User Preferences dialog  
  Added : UI - moving lines on right mouse dragged [requested by Tuiz] - http://bugtracker.wordrider.net/task/39?project=4
  Added : UI - clipboard monitoring catches links like http://blabla.com/?url=http:%25%25service.com%25 (decoding URL)
  Changed : UI - clipboard monitoring is ON by default
  Changed : plugins are loaded on the fly (not during start) from system temporary directory
  Changed : plugins - major intern changes and fixes in most of plugins
  Fixed : UI - clipboard monitoring didn't catch html links like <a href="http://service.com/asdasd/">Part1</a> [reported by Alex]

10th November 2008 - FreeRapid Downloader 0.71 released
  Added : Hungarian translation [thanks to Denisz Kosztyukovics!]
  Added : German translation [thanks to Rabyte!]  
  Added : Spanish translation [thanks to El Lalo!]