@@ -172,5 +172,5 @@ deSelectAllActivityAction.Action.smallIcon=${iconsPath}uncheck.png
 checkForFileExistenceBeforeDownload.text=Check for file existence on the server before downloading
 checkServiceAsIconOnly.text=Represent download service only by an icon without text in table
 
-checkRecheckFilesOnStart.text=Re-check for file existence on the server after application start
+checkRecheckFilesOnStart.text=Re-check for file existence on the server when application starts
 
