@@ -14,7 +14,9 @@ Fixed - indicates a bug fix
 XXX December 2008 - FreeRapid Downloader 0.8 released
   Added : --portable command line switch for application start [requested by Rusttaf]
           - with this switch, configuration files will be stored in the 'config' folder,
-            all file paths will be saved relatively to FRD folder (if possible) - useful for USB FLASH drives  
+            all file paths will be saved relatively to FRD folder (if possible) - useful for USB FLASH drives
+  Added : support to validate links manually [requested by Alex]
+  Added : option to reset existence status when application starts                  
   Added : support for plugins update + many UI settings for it
   Added : detection of presence of ESET Smart Antivirus on Windows system to avoid startup problems
   Added : UI - new tab sheet in User Preferences dialog for plugins
